scss/boost_union/post.scss
/* ... */
/* If the admin configured the course index to show course activity type icons. */
body.hascourseindexcmicons {
    #courseindex {
        /* Show the course activity type icons
           (which are always added to the DOM regardless of the setting). */
        span.courseindex-cmicon-container {
            display: block;
        }
    }

    /* If the admin configured the completion info to be shown as icon color. */
    &.hascourseindexcplicon {
        #courseindex {
            /* Hide the completion widget at the beginning of the line. */
            .courseindex-cmicon-cpl-sol {
                display: none;
            }

            /* And hide the completion info within the activity type icon container.
               (This element just serves as data source for the observer JS and would be shown by Moodle core JS). */
            .courseindex-cmicon-icon .completioninfo {
                display: none;
            }

            /* And move the section title in the course index slightly to the right to align it vertically with the
               activity title (which is now slightly more right as well) again. */
            .courseindex-chevron {
                padding-right: 12px;
            }
        }
    }

    /* If the admin configured the completion info to be shown at the end of the line. */
    &.hascourseindexcpleol {
        #courseindex {
            /* Hide the completion widget at the beginning of the line. */
            .courseindex-cmicon-cpl-sol {
                display: none;
            }

            /* And move the section title in the course index slightly to the right to align it vertically with the
               activity title (which is now slightly more right as well) again. */
            .courseindex-chevron {
                padding-right: 12px;
            }
        }
    }

    /* If the admin configured the completion info to be shown at the start of the line. */
    &.hascourseindexcplsol {
        #courseindex {
            /* Hide the completion widget at the end of the line. */
            .courseindex-cmicon-cpl-eol {
                display: none;
            }

            /* And move the activity icon slightly closer to the completion icon. */
            .courseindex-item .completioninfo {
                min-width: 20px;
            }
        }
    }

    /* If editing is enabled. */
    &.editing {
        #courseindex {
            /* Hide all completion info elements. */
            span.completioninfo {
                display: none;
            }
        }
    }

    /* Style the course index activity type icons / completion widget */
    #courseindex {
        /* Position of the course index activity type icon container. */
        .courseindex-cmicon-container {
            border-radius: 4px;
            margin-right: 6px;
            line-height: normal;
        }

        /* General style of the course index activity type icon. */
        .courseindex-cmicon {
            margin: 0.1rem;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            .icon {
                height: 20px;
                margin-right: unset;
                width: 20px;
            }
        }

        /* Gain back the vertical space which was given to the icon by reducing the vertical padding of each courseindex
           element by 0.1rem. */
        .courseindex-item {
            padding: .45rem 0 .45rem .5rem;
        }

        /* Overwrite activity type icon style for dimmed activities. */
        .courseindex-item.dimmed .courseindex-cmicon-icon {
            filter: invert(0.5);
        }

        /* Overwrite activity type icon style for incomplete activities. */
        .courseindex-cmicon-cpl-incomplete {
            background-color: $gray-600;
            .courseindex-cmicon-icon {
                filter: brightness(0) invert(1);
            }
        }

        /* Overwrite activity type icon style for complete activities. */
        .courseindex-cmicon-cpl-complete {
            background-color: $success;
            .courseindex-cmicon-icon {
                filter: brightness(0) invert(1);
            }
        }

        /* Overwrite activity type icon style for failed activities. */
        .courseindex-cmicon-cpl-fail {
            background-color: $danger;
            .courseindex-cmicon-icon {
                filter: brightness(0) invert(1);
            }
        }
    }
}


/*=======================================
 * Settings: Look -> Category index / site home + Course
 ======================================*/

/*---------------------------------------
 * Course details.
 --------------------------------------*/

// For the course details which are shown within the course listings and within the course header in the same way.
.theme_boost_union-courselisting,
#bucourseheader {
    /* The custom fields. */
    .customfields {
        /* Style the custom fields if shown as text.
            We can't use Bootstrap classes in Mustache here as these elements are output by a renderer which we do not influence. */

        /* Use a smaller font. */
        .customfield {
            font-size: 80%;
        }
        /* Highlight the field name. */
        .customfieldname,
        .customfieldseparator {
            @extend strong;
        }
    }

    /* The course contact images. */
    .contact img {
        /* Make sure that the contact images are small enough even though the avatar file is bigger. */
        width: 35px;
        height: 35px;
    }
    /* Remove the blue background which is added to focussed links by Moodle core. */
    a:focus:has(.contact) {
        background: none;
        outline: none;
        box-shadow: none;
    }
}
/* ... */

